878.	[func]		marcin
	DHCPv4 and DHCPv6 server now support the lfc-interval
	parameter which configures the interval in which the
	Memfile lease database backend executes the Lease File
	Cleanup (LFC). Note: the LFC is currently no-op and will
	be implemented shortly.
	(Trac #3668, git 2ce54eeb607d2caa0901125b5d86a373e9e3f165)

877.	[func]           marcin
	DHCPv4 server drops unicast packets sent to the IPv4 address
	on which the server is not configured to listen.
	(Trac #3547, git 803f1f0f145b0f252ffc3637f758a47e0061de85)

876.	[func]          tomek
	Two new MAC aquisition methods implemented for DHCPv6:
	docsis-modem (which extracts MAC address from an option inserted
	by a cable modem) and docsis-ctms (which extracts MAC address from
	an option inserted by CMTS which acts as a DHCPv6 relay agent).
	(Trac #3553, git ad0a3772774bc5f9831a5ba16725a5a22887b8cb)

875.    [bug]           afidalgo, marcin
	The DHCPv4 server no longer appends the trailing dot to the
	hostnames sent to the clients in the Hostname option (12).
	Appending trailing dot confused some DHCPv4 clients.
	Credits to Alexis Fidalgo for submitting a patch.
	(Trac #3636, git 450867e6987f4c786ad6c2cc95cabcff601c1b48)

874.    [func]           marcin
	Changes to the Memfile lease database backend to load
	leases from multiple files during startup or server
	reconfiguration. This change is required by the Lease File
	Cleanup feature, which leads to the creation of additional
	files holding cleaned up lease information.
	(Trac #3671, git 667de2ef9044e97c76b15cacc7285132cdffdfcf)

873.    [bug]           wlodek
	Removed references to non-existing pgsql_test.sh script
	from Makefile.
	(Trac #3662, git ab69f38dd82cf3c3736588e03c1dc568de3ae6d6)

872.    [func]          wlodek
	Check for required header file errcode.h for PostgreSQL
	backend added to configure process.
	(Trac #3663, git d666dd9263ba1aaf88bec5b8e5ae3f0cb8e5c1db)

871.	[func]		kalmus, tomek