@@ -158,6 +158,10 @@ This debug message is issued when the client being in the INIT-REBOOT state
 requested an address which is not assigned to him. The server will respond
 to this client with DHCPNAK.
 
+% DHCP4_NO_LEASE_INIT_REBOOT no lease for address %1 requested by INIT-REBOOT client (id: %2, hwaddr: %3)
+This debug message is issued when the client being in the INIT-REBOOT state
+requested an address but this client is unknown. The server will not respond.
+
 % DHCP4_INVALID_RELAY_INFO malformed packet received from client-id %1, hwaddr %2: %3
 This message is logged when the client sends invalid combination of
 values in the giaddr and hops fields. If the packet is relayed it should
